src/frontend/parser.output
Terminals unused in grammar

   AND
   OR
   "!"
   "!="
   "&&"
   "||"


State 54 conflicts: 10 shift/reduce


Grammar

    0 $accept: Expressions "end of file"

    1 Expressions: Expression
    2            | Expressions Terminator Expression
    3            | %empty
    4            | Expressions Terminator

    5 BodyExpressions: Expression
    6                | BodyExpressions Terminator Expression
    7                | %empty
    8                | BodyExpressions Terminator

    9 Expression: Literal
   10           | Call
   11           | GetConstant
   12           | SetLocal
   13           | GetLocal
   14           | Function
   15           | Lambda
   16           | Class
   17           | OPEN_PAREN Expression CLOSE_PAREN

   18 Literal: INTEGER
   19        | FLOAT
   20        | STRING
   21        | SELF

   22 Operators: PLUS
   23          | MINUS
   24          | MULT
   25          | DIV
   26          | LT
   27          | GT
   28          | LE
   29          | GE
   30          | EQ

   31 Call: Expression Operators Expression
   32     | IDENTIFIER OPEN_PAREN Arguments CLOSE_PAREN
   33     | Expression DOT IDENTIFIER OPEN_PAREN Arguments CLOSE_PAREN

   34 Function: FUNC IDENTIFIER OPEN_PAREN Parameters CLOSE_PAREN Terminator BodyExpressions END
   35         | OPERATOR Operators OPEN_PAREN Parameters CLOSE_PAREN Terminator BodyExpressions END

   36 Lambda: LAMBDA DO PIPE Parameters PIPE Terminator BodyExpressions END

   37 Arguments: Expression
   38          | Arguments COMMA Expression
   39          | %empty

   40 Parameters: IDENTIFIER
   41           | Parameters COMMA IDENTIFIER
   42           | %empty

   43 Class: CLASS CONSTANT COLON CONSTANT Terminator BodyExpressions END
   44      | CLASS CONSTANT Terminator BodyExpressions END

   45 SetLocal: IDENTIFIER ASSIGN Expression

   46 GetLocal: IDENTIFIER

   47 GetConstant: CONSTANT

   48 Terminator: NEWLINE


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
INTEGER (258) 18
FLOAT (259) 19
STRING (260) 20
SELF (261) 21
CONSTANT (262) 43 44 47
IDENTIFIER (263) 32 33 34 40 41 45 46
ASSIGN (264) 45
OPEN_PAREN (265) 17 32 33 34 35
CLOSE_PAREN (266) 17 32 33 34 35
COMMA (267) 38 41
FUNC (268) 34
DO (269) 36
END (270) 34 35 36 43 44
DOT (271) 33
PIPE (272) 36
LAMBDA (273) 36
CLASS (274) 43 44
OPERATOR (275) 35
PLUS (276) 22
MINUS (277) 23
MULT (278) 24
DIV (279) 25
GT (280) 27
LT (281) 26
GE (282) 29
LE (283) 28
EQ (284) 30
AND (285)
OR (286)
COLON (287) 43
NEWLINE (288) 48
"!" (289)
"!=" (290)
"&&" (291)
"||" (292)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Expressions (39)
    on left: 1 2 3 4, on right: 0 2 4
BodyExpressions (40)
    on left: 5 6 7 8, on right: 6 8 34 35 36 43 44
Expression (41)
    on left: 9 10 11 12 13 14 15 16 17, on right: 1 2 5 6 17 31 33
    37 38 45
Literal (42)
    on left: 18 19 20 21, on right: 9
Operators (43)
    on left: 22 23 24 25 26 27 28 29 30, on right: 31 35
Call (44)
    on left: 31 32 33, on right: 10
Function (45)
    on left: 34 35, on right: 14
Lambda (46)
    on left: 36, on right: 15
Arguments (47)
    on left: 37 38 39, on right: 32 33 38
Parameters (48)
    on left: 40 41 42, on right: 34 35 36 41
Class (49)
    on left: 43 44, on right: 16
SetLocal (50)
    on left: 45, on right: 12
GetLocal (51)
    on left: 46, on right: 13
GetConstant (52)
    on left: 47, on right: 11
Terminator (53)
    on left: 48, on right: 2 4 6 8 34 35 36 43 44


State 0

    0 $accept: . Expressions "end of file"

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    SELF        shift, and go to state 4
    CONSTANT    shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    OPEN_PAREN  shift, and go to state 7
    FUNC        shift, and go to state 8
    LAMBDA      shift, and go to state 9
    CLASS       shift, and go to state 10
    OPERATOR    shift, and go to state 11

    $default  reduce using rule 3 (Expressions)

    Expressions  go to state 12
    Expression   go to state 13
    Literal      go to state 14
    Call         go to state 15
    Function     go to state 16
    Lambda       go to state 17
    Class        go to state 18
    SetLocal     go to state 19
    GetLocal     go to state 20
    GetConstant  go to state 21


State 1

   18 Literal: INTEGER .

    $default  reduce using rule 18 (Literal)


State 2

   19 Literal: FLOAT .

    $default  reduce using rule 19 (Literal)


State 3

   20 Literal: STRING .

    $default  reduce using rule 20 (Literal)


State 4

   21 Literal: SELF .

    $default  reduce using rule 21 (Literal)


State 5

   47 GetConstant: CONSTANT .

    $default  reduce using rule 47 (GetConstant)


State 6

   32 Call: IDENTIFIER . OPEN_PAREN Arguments CLOSE_PAREN
   45 SetLocal: IDENTIFIER . ASSIGN Expression
   46 GetLocal: IDENTIFIER .

    ASSIGN      shift, and go to state 22
    OPEN_PAREN  shift, and go to state 23

    $default  reduce using rule 46 (GetLocal)


State 7

   17 Expression: OPEN_PAREN . Expression CLOSE_PAREN

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    SELF        shift, and go to state 4
    CONSTANT    shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    OPEN_PAREN  shift, and go to state 7
    FUNC        shift, and go to state 8
    LAMBDA      shift, and go to state 9
    CLASS       shift, and go to state 10
    OPERATOR    shift, and go to state 11

    Expression   go to state 24
    Literal      go to state 14
    Call         go to state 15
    Function     go to state 16
    Lambda       go to state 17
    Class        go to state 18
    SetLocal     go to state 19
    GetLocal     go to state 20
    GetConstant  go to state 21


State 8

   34 Function: FUNC . IDENTIFIER OPEN_PAREN Parameters CLOSE_PAREN Terminator BodyExpressions END

    IDENTIFIER  shift, and go to state 25


State 9

   36 Lambda: LAMBDA . DO PIPE Parameters PIPE Terminator BodyExpressions END

    DO  shift, and go to state 26


State 10

   43 Class: CLASS . CONSTANT COLON CONSTANT Terminator BodyExpressions END
   44      | CLASS . CONSTANT Terminator BodyExpressions END

    CONSTANT  shift, and go to state 27


State 11

   35 Function: OPERATOR . Operators OPEN_PAREN Parameters CLOSE_PAREN Terminator BodyExpressions END

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    MULT   shift, and go to state 30
    DIV    shift, and go to state 31
    GT     shift, and go to state 32
    LT     shift, and go to state 33
    GE     shift, and go to state 34
    LE     shift, and go to state 35
    EQ     shift, and go to state 36

    Operators  go to state 37


State 12

    0 $accept: Expressions . "end of file"
    2 Expressions: Expressions . Terminator Expression
    4            | Expressions . Terminator

    "end of file"  shift, and go to state 38
    NEWLINE        shift, and go to state 39

    Terminator  go to state 40


State 13

    1 Expressions: Expression .
   31 Call: Expression . Operators Expression
   33     | Expression . DOT IDENTIFIER OPEN_PAREN Arguments CLOSE_PAREN

    DOT    shift, and go to state 41
    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    MULT   shift, and go to state 30
    DIV    shift, and go to state 31
    GT     shift, and go to state 32
    LT     shift, and go to state 33
    GE     shift, and go to state 34
    LE     shift, and go to state 35
    EQ     shift, and go to state 36

    $default  reduce using rule 1 (Expressions)

    Operators  go to state 42


State 14

    9 Expression: Literal .

    $default  reduce using rule 9 (Expression)


State 15

   10 Expression: Call .

    $default  reduce using rule 10 (Expression)


State 16

   14 Expression: Function .

    $default  reduce using rule 14 (Expression)


State 17

   15 Expression: Lambda .

    $default  reduce using rule 15 (Expression)


State 18

   16 Expression: Class .

    $default  reduce using rule 16 (Expression)


State 19

   12 Expression: SetLocal .

    $default  reduce using rule 12 (Expression)


State 20

   13 Expression: GetLocal .

    $default  reduce using rule 13 (Expression)


State 21

   11 Expression: GetConstant .

    $default  reduce using rule 11 (Expression)


State 22

   45 SetLocal: IDENTIFIER ASSIGN . Expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    SELF        shift, and go to state 4
    CONSTANT    shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    OPEN_PAREN  shift, and go to state 7
    FUNC        shift, and go to state 8
    LAMBDA      shift, and go to state 9
    CLASS       shift, and go to state 10
    OPERATOR    shift, and go to state 11

    Expression   go to state 43
    Literal      go to state 14
    Call         go to state 15
    Function     go to state 16
    Lambda       go to state 17
    Class        go to state 18
    SetLocal     go to state 19
    GetLocal     go to state 20
    GetConstant  go to state 21


State 23

   32 Call: IDENTIFIER OPEN_PAREN . Arguments CLOSE_PAREN

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    SELF        shift, and go to state 4
    CONSTANT    shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    OPEN_PAREN  shift, and go to state 7
    FUNC        shift, and go to state 8
    LAMBDA      shift, and go to state 9
    CLASS       shift, and go to state 10
    OPERATOR    shift, and go to state 11

    $default  reduce using rule 39 (Arguments)

    Expression   go to state 44
    Literal      go to state 14
    Call         go to state 15
    Function     go to state 16
    Lambda       go to state 17
    Arguments    go to state 45
    Class        go to state 18
    SetLocal     go to state 19
    GetLocal     go to state 20
    GetConstant  go to state 21


State 24

   17 Expression: OPEN_PAREN Expression . CLOSE_PAREN
   31 Call: Expression . Operators Expression
   33     | Expression . DOT IDENTIFIER OPEN_PAREN Arguments CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 46
    DOT          shift, and go to state 41
    PLUS         shift, and go to state 28
    MINUS        shift, and go to state 29
    MULT         shift, and go to state 30
    DIV          shift, and go to state 31
    GT           shift, and go to state 32
    LT           shift, and go to state 33
    GE           shift, and go to state 34
    LE           shift, and go to state 35
    EQ           shift, and go to state 36

    Operators  go to state 42


State 25

   34 Function: FUNC IDENTIFIER . OPEN_PAREN Parameters CLOSE_PAREN Terminator BodyExpressions END

    OPEN_PAREN  shift, and go to state 47


State 26

   36 Lambda: LAMBDA DO . PIPE Parameters PIPE Terminator BodyExpressions END

    PIPE  shift, and go to state 48


State 27

   43 Class: CLASS CONSTANT . COLON CONSTANT Terminator BodyExpressions END
   44      | CLASS CONSTANT . Terminator BodyExpressions END

    COLON    shift, and go to state 49
    NEWLINE  shift, and go to state 39

    Terminator  go to state 50


State 28

   22 Operators: PLUS .

    $default  reduce using rule 22 (Operators)


State 29

   23 Operators: MINUS .

    $default  reduce using rule 23 (Operators)


State 30

   24 Operators: MULT .

    $default  reduce using rule 24 (Operators)


State 31

   25 Operators: DIV .

    $default  reduce using rule 25 (Operators)


State 32

   27 Operators: GT .

    $default  reduce using rule 27 (Operators)


State 33

   26 Operators: LT .

    $default  reduce using rule 26 (Operators)


State 34

   29 Operators: GE .

    $default  reduce using rule 29 (Operators)


State 35

   28 Operators: LE .

    $default  reduce using rule 28 (Operators)


State 36

   30 Operators: EQ .

    $default  reduce using rule 30 (Operators)


State 37

   35 Function: OPERATOR Operators . OPEN_PAREN Parameters CLOSE_PAREN Terminator BodyExpressions END

    OPEN_PAREN  shift, and go to state 51


State 38

    0 $accept: Expressions "end of file" .

    $default  accept


State 39

   48 Terminator: NEWLINE .

    $default  reduce using rule 48 (Terminator)


State 40

    2 Expressions: Expressions Terminator . Expression
    4            | Expressions Terminator .

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    SELF        shift, and go to state 4
    CONSTANT    shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    OPEN_PAREN  shift, and go to state 7
    FUNC        shift, and go to state 8
    LAMBDA      shift, and go to state 9
    CLASS       shift, and go to state 10
    OPERATOR    shift, and go to state 11

    $default  reduce using rule 4 (Expressions)

    Expression   go to state 52
    Literal      go to state 14
    Call         go to state 15
    Function     go to state 16
    Lambda       go to state 17
    Class        go to state 18
    SetLocal     go to state 19
    GetLocal     go to state 20
    GetConstant  go to state 21


State 41

   33 Call: Expression DOT . IDENTIFIER OPEN_PAREN Arguments CLOSE_PAREN

    IDENTIFIER  shift, and go to state 53


State 42

   31 Call: Expression Operators . Expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    SELF        shift, and go to state 4
    CONSTANT    shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    OPEN_PAREN  shift, and go to state 7
    FUNC        shift, and go to state 8
    LAMBDA      shift, and go to state 9
    CLASS       shift, and go to state 10
    OPERATOR    shift, and go to state 11

    Expression   go to state 54
    Literal      go to state 14
    Call         go to state 15
    Function     go to state 16
    Lambda       go to state 17
    Class        go to state 18
    SetLocal     go to state 19
    GetLocal     go to state 20
    GetConstant  go to state 21


State 43

   31 Call: Expression . Operators Expression
   33     | Expression . DOT IDENTIFIER OPEN_PAREN Arguments CLOSE_PAREN
   45 SetLocal: IDENTIFIER ASSIGN Expression .

    $default  reduce using rule 45 (SetLocal)

    Operators  go to state 42


State 44

   31 Call: Expression . Operators Expression
   33     | Expression . DOT IDENTIFIER OPEN_PAREN Arguments CLOSE_PAREN
   37 Arguments: Expression .

    DOT    shift, and go to state 41
    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    MULT   shift, and go to state 30
    DIV    shift, and go to state 31
    GT     shift, and go to state 32
    LT     shift, and go to state 33
    GE     shift, and go to state 34
    LE     shift, and go to state 35
    EQ     shift, and go to state 36

    $default  reduce using rule 37 (Arguments)

    Operators  go to state 42


State 45

   32 Call: IDENTIFIER OPEN_PAREN Arguments . CLOSE_PAREN
   38 Arguments: Arguments . COMMA Expression

    CLOSE_PAREN  shift, and go to state 55
    COMMA        shift, and go to state 56


State 46

   17 Expression: OPEN_PAREN Expression CLOSE_PAREN .

    $default  reduce using rule 17 (Expression)


State 47

   34 Function: FUNC IDENTIFIER OPEN_PAREN . Parameters CLOSE_PAREN Terminator BodyExpressions END

    IDENTIFIER  shift, and go to state 57

    $default  reduce using rule 42 (Parameters)

    Parameters  go to state 58


State 48

   36 Lambda: LAMBDA DO PIPE . Parameters PIPE Terminator BodyExpressions END

    IDENTIFIER  shift, and go to state 57

    $default  reduce using rule 42 (Parameters)

    Parameters  go to state 59


State 49

   43 Class: CLASS CONSTANT COLON . CONSTANT Terminator BodyExpressions END

    CONSTANT  shift, and go to state 60


State 50

   44 Class: CLASS CONSTANT Terminator . BodyExpressions END

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    SELF        shift, and go to state 4
    CONSTANT    shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    OPEN_PAREN  shift, and go to state 7
    FUNC        shift, and go to state 8
    LAMBDA      shift, and go to state 9
    CLASS       shift, and go to state 10
    OPERATOR    shift, and go to state 11

    $default  reduce using rule 7 (BodyExpressions)

    BodyExpressions  go to state 61
    Expression       go to state 62
    Literal          go to state 14
    Call             go to state 15
    Function         go to state 16
    Lambda           go to state 17
    Class            go to state 18
    SetLocal         go to state 19
    GetLocal         go to state 20
    GetConstant      go to state 21


State 51

   35 Function: OPERATOR Operators OPEN_PAREN . Parameters CLOSE_PAREN Terminator BodyExpressions END

    IDENTIFIER  shift, and go to state 57

    $default  reduce using rule 42 (Parameters)

    Parameters  go to state 63


State 52

    2 Expressions: Expressions Terminator Expression .
   31 Call: Expression . Operators Expression
   33     | Expression . DOT IDENTIFIER OPEN_PAREN Arguments CLOSE_PAREN

    DOT    shift, and go to state 41
    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    MULT   shift, and go to state 30
    DIV    shift, and go to state 31
    GT     shift, and go to state 32
    LT     shift, and go to state 33
    GE     shift, and go to state 34
    LE     shift, and go to state 35
    EQ     shift, and go to state 36

    $default  reduce using rule 2 (Expressions)

    Operators  go to state 42


State 53

   33 Call: Expression DOT IDENTIFIER . OPEN_PAREN Arguments CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 64


State 54

   31 Call: Expression . Operators Expression
   31     | Expression Operators Expression .
   33     | Expression . DOT IDENTIFIER OPEN_PAREN Arguments CLOSE_PAREN

    DOT    shift, and go to state 41
    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    MULT   shift, and go to state 30
    DIV    shift, and go to state 31
    GT     shift, and go to state 32
    LT     shift, and go to state 33
    GE     shift, and go to state 34
    LE     shift, and go to state 35
    EQ     shift, and go to state 36

    DOT       [reduce using rule 31 (Call)]
    PLUS      [reduce using rule 31 (Call)]
    MINUS     [reduce using rule 31 (Call)]
    MULT      [reduce using rule 31 (Call)]
    DIV       [reduce using rule 31 (Call)]
    GT        [reduce using rule 31 (Call)]
    LT        [reduce using rule 31 (Call)]
    GE        [reduce using rule 31 (Call)]
    LE        [reduce using rule 31 (Call)]
    EQ        [reduce using rule 31 (Call)]
    $default  reduce using rule 31 (Call)

    Operators  go to state 42


State 55

   32 Call: IDENTIFIER OPEN_PAREN Arguments CLOSE_PAREN .

    $default  reduce using rule 32 (Call)


State 56

   38 Arguments: Arguments COMMA . Expression

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    SELF        shift, and go to state 4
    CONSTANT    shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    OPEN_PAREN  shift, and go to state 7
    FUNC        shift, and go to state 8
    LAMBDA      shift, and go to state 9
    CLASS       shift, and go to state 10
    OPERATOR    shift, and go to state 11

    Expression   go to state 65
    Literal      go to state 14
    Call         go to state 15
    Function     go to state 16
    Lambda       go to state 17
    Class        go to state 18
    SetLocal     go to state 19
    GetLocal     go to state 20
    GetConstant  go to state 21


State 57

   40 Parameters: IDENTIFIER .

    $default  reduce using rule 40 (Parameters)


State 58

   34 Function: FUNC IDENTIFIER OPEN_PAREN Parameters . CLOSE_PAREN Terminator BodyExpressions END
   41 Parameters: Parameters . COMMA IDENTIFIER

    CLOSE_PAREN  shift, and go to state 66
    COMMA        shift, and go to state 67


State 59

   36 Lambda: LAMBDA DO PIPE Parameters . PIPE Terminator BodyExpressions END
   41 Parameters: Parameters . COMMA IDENTIFIER

    COMMA  shift, and go to state 67
    PIPE   shift, and go to state 68


State 60

   43 Class: CLASS CONSTANT COLON CONSTANT . Terminator BodyExpressions END

    NEWLINE  shift, and go to state 39

    Terminator  go to state 69


State 61

    6 BodyExpressions: BodyExpressions . Terminator Expression
    8                | BodyExpressions . Terminator
   44 Class: CLASS CONSTANT Terminator BodyExpressions . END

    END      shift, and go to state 70
    NEWLINE  shift, and go to state 39

    Terminator  go to state 71


State 62

    5 BodyExpressions: Expression .
   31 Call: Expression . Operators Expression
   33     | Expression . DOT IDENTIFIER OPEN_PAREN Arguments CLOSE_PAREN

    DOT    shift, and go to state 41
    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    MULT   shift, and go to state 30
    DIV    shift, and go to state 31
    GT     shift, and go to state 32
    LT     shift, and go to state 33
    GE     shift, and go to state 34
    LE     shift, and go to state 35
    EQ     shift, and go to state 36

    $default  reduce using rule 5 (BodyExpressions)

    Operators  go to state 42


State 63

   35 Function: OPERATOR Operators OPEN_PAREN Parameters . CLOSE_PAREN Terminator BodyExpressions END
   41 Parameters: Parameters . COMMA IDENTIFIER

    CLOSE_PAREN  shift, and go to state 72
    COMMA        shift, and go to state 67


State 64

   33 Call: Expression DOT IDENTIFIER OPEN_PAREN . Arguments CLOSE_PAREN

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    SELF        shift, and go to state 4
    CONSTANT    shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    OPEN_PAREN  shift, and go to state 7
    FUNC        shift, and go to state 8
    LAMBDA      shift, and go to state 9
    CLASS       shift, and go to state 10
    OPERATOR    shift, and go to state 11

    $default  reduce using rule 39 (Arguments)

    Expression   go to state 44
    Literal      go to state 14
    Call         go to state 15
    Function     go to state 16
    Lambda       go to state 17
    Arguments    go to state 73
    Class        go to state 18
    SetLocal     go to state 19
    GetLocal     go to state 20
    GetConstant  go to state 21


State 65

   31 Call: Expression . Operators Expression
   33     | Expression . DOT IDENTIFIER OPEN_PAREN Arguments CLOSE_PAREN
   38 Arguments: Arguments COMMA Expression .

    DOT    shift, and go to state 41
    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    MULT   shift, and go to state 30
    DIV    shift, and go to state 31
    GT     shift, and go to state 32
    LT     shift, and go to state 33
    GE     shift, and go to state 34
    LE     shift, and go to state 35
    EQ     shift, and go to state 36

    $default  reduce using rule 38 (Arguments)

    Operators  go to state 42


State 66

   34 Function: FUNC IDENTIFIER OPEN_PAREN Parameters CLOSE_PAREN . Terminator BodyExpressions END

    NEWLINE  shift, and go to state 39

    Terminator  go to state 74


State 67

   41 Parameters: Parameters COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 75


State 68

   36 Lambda: LAMBDA DO PIPE Parameters PIPE . Terminator BodyExpressions END

    NEWLINE  shift, and go to state 39

    Terminator  go to state 76


State 69

   43 Class: CLASS CONSTANT COLON CONSTANT Terminator . BodyExpressions END

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    SELF        shift, and go to state 4
    CONSTANT    shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    OPEN_PAREN  shift, and go to state 7
    FUNC        shift, and go to state 8
    LAMBDA      shift, and go to state 9
    CLASS       shift, and go to state 10
    OPERATOR    shift, and go to state 11

    $default  reduce using rule 7 (BodyExpressions)

    BodyExpressions  go to state 77
    Expression       go to state 62
    Literal          go to state 14
    Call             go to state 15
    Function         go to state 16
    Lambda           go to state 17
    Class            go to state 18
    SetLocal         go to state 19
    GetLocal         go to state 20
    GetConstant      go to state 21


State 70

   44 Class: CLASS CONSTANT Terminator BodyExpressions END .

    $default  reduce using rule 44 (Class)


State 71

    6 BodyExpressions: BodyExpressions Terminator . Expression
    8                | BodyExpressions Terminator .

    INTEGER     shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    SELF        shift, and go to state 4
    CONSTANT    shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    OPEN_PAREN  shift, and go to state 7
    FUNC        shift, and go to state 8
    LAMBDA      shift, and go to state 9
    CLASS       shift, and go to state 10
    OPERATOR    shift, and go to state 11

    $default  reduce using rule 8 (BodyExpressions)

    Expression   go to state 78
    Literal      go to state 14
    Call         go to state 15
    Function     go to state 16
    Lambda       go to state 17
    Class        go to state 18
    SetLocal     go to state 19
    GetLocal     go to state 20
    GetConstant  go to state 21


State 72
